style: update typography to Libre Caslon Display and refine visual styles

--- a/src/index.css
+++ b/src/index.css
@@ -88,7 +88,7 @@ html, body, #root { height: 100%; }
 .quote-text {
   font-size: 11pt;
   line-height: 1.5;
-  font-family: serif;
+  font-family: 'Libre Caslon Display', Georgia, serif;
 }
 
 .quote-author {
